--- a/index.html
+++ b/index.html
@@ -2,35 +2,35 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Multiplayer Game</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-database.js"></script>
 
 
     <script>
      
-     const firebaseConfig = {
-  apiKey: "AIzaSyDAxGqaJD6MI_O0JxiD_teDYE3dxXEKQK8",
-  authDomain: "multiplayergame-cfd2c.firebaseapp.com",
-  databaseURL: "https://multiplayergame-cfd2c-default-rtdb.firebaseio.com",
-  projectId: "multiplayergame-cfd2c",
-  storageBucket: "multiplayergame-cfd2c.appspot.com",
-  messagingSenderId: "992509719878",
-  appId: "1:992509719878:web:6b006710f54d2e41686147"
+    var firebaseConfig = {
+  apiKey: "AIzaSyB8dpdPL2_fEMKpGI20vxMMu_uJk_kETPk",
+  authDomain: "car-racing-34b52.firebaseapp.com",
+  databaseURL: "https://car-racing-34b52-default-rtdb.firebaseio.com",
+  projectId: "car-racing-34b52",
+  storageBucket: "car-racing-34b52.appspot.com",
+  messagingSenderId: "303260161686",
+  appId: "1:303260161686:web:7adf42839f2f8bef4fd4b7"
 };
+
 
     
     firebase.initializeApp(firebaseConfig);
     </script>
 
-    <script src="js/Player.js"></script>
-    <script src="js/Form.js"></script>
-    <script src="js/Game.js"></script>
+    <script src="Player.js"></script>
+    <script src="Form.js"></script>
+    <script src="Game.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
