--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="p5.play.js"> <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script> 
   <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
    <script> 
-   const firebaseConfig = { 
+   var firebaseConfig = { 
      apiKey: "AIzaSyDAxGqaJD6MI_O0JxiD_teDYE3dxXEKQK8", 
      authDomain: "multiplayergame-cfd2c.firebaseapp.com", 
      databaseURL: "https://multiplayergame-cfd2c-default-rtdb.firebaseio.com", 
@@ -25,5 +25,5 @@ firebase.initializeApp(firebaseConfig);
         <link rel="stylesheet" type="text/css" href="style.css"/> 
     </head> 
     <body> 
-          <script src="sketch.js"> 
+          <script src="sketch.js"></script>
     </body> </html>
