--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <script src="p5.play.js"> <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script> 
   <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
    <script> 
-   var firebaseConfig = { 
-     apiKey: "AIzaSyDAxGqaJD6MI_O0JxiD_teDYE3dxXEKQK8", 
-     authDomain: "multiplayergame-cfd2c.firebaseapp.com", 
-     databaseURL: "https://multiplayergame-cfd2c-default-rtdb.firebaseio.com", 
-     projectId: "multiplayergame-cfd2c", 
-     storageBucket: "multiplayergame-cfd2c.appspot.com", 
-     messagingSenderId: "992509719878", 
-     appId: "1:992509719878:web:6b006710f54d2e41686147" };
+   var firebaseConfig = {
+  apiKey: "AIzaSyCO87ljyqkJnw4UwKtlHqxMl-w-Sr6aYeY",
+  authDomain: "car-race-df0bb.firebaseapp.com",
+  projectId: "car-race-df0bb",
+  storageBucket: "car-race-df0bb.appspot.com",
+  messagingSenderId: "462214626185",
+  appId: "1:462214626185:web:059cffce547d51f833bf58"
+};
     
 firebase.initializeApp(firebaseConfig); 
   </script> 
